# speedtest-logger

./: .editorconfig  LICENSE  README.rst  pyproject.toml  requirements.txt  speedtest.ipynb  speedtest_logger.py
